[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main/Game.gd" type="Script" id=1]
[ext_resource path="res://Assets/Prefabs/rock_walls_tilemap.tres" type="TileSet" id=2]
[ext_resource path="res://Assets/UI/full_heart.png" type="Texture" id=3]
[ext_resource path="res://Bob/Bob.tscn" type="PackedScene" id=4]
[ext_resource path="res://Joystick/Joystick.tscn" type="PackedScene" id=5]

[node name="Main" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_top = 0.219
anchor_right = 1.0
anchor_bottom = 0.781
margin_top = -0.256012
margin_bottom = 0.255981
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game" type="Node2D" parent="Control"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="Control/Game"]
scale = Vector2( 4, 4 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
collision_layer = 16
collision_mask = 15
format = 1
tile_data = PoolIntArray( 0, 9, 0, 1, 10, 0, 2, 10, 0, 3, 10, 0, 4, 10, 0, 5, 10, 0, 6, 10, 0, 7, 10, 0, 8, 14, 0, 9, 10, 0, 10, 10, 0, 11, 10, 0, 12, 10, 0, 13, 10, 0, 14, 10, 0, 15, 10, 0, 16, 10, 0, 17, 12, 0, 65536, 16, 0, 65537, 18, 0, 65538, 18, 0, 65539, 18, 0, 65540, 18, 0, 65541, 18, 0, 65542, 18, 0, 65543, 18, 0, 65544, 18, 0, 65545, 18, 0, 65546, 18, 0, 65547, 18, 0, 65548, 18, 0, 65549, 18, 0, 65550, 18, 0, 65551, 18, 0, 65552, 18, 0, 65553, 16, 0, 131072, 16, 0, 131073, 18, 0, 131074, 18, 0, 131075, 18, 0, 131076, 18, 0, 131077, 18, 0, 131078, 18, 0, 131079, 18, 0, 131080, 18, 0, 131081, 18, 0, 131082, 18, 0, 131083, 18, 0, 131084, 18, 0, 131085, 22, 0, 131086, 18, 0, 131087, 23, 0, 131088, 18, 0, 131089, 16, 0, 196608, 16, 0, 196609, 18, 0, 196610, 18, 0, 196611, 18, 0, 196612, 18, 0, 196613, 18, 0, 196614, 23, 0, 196615, 18, 0, 196616, 18, 0, 196617, 18, 0, 196618, 18, 0, 196619, 18, 0, 196620, 18, 0, 196621, 18, 0, 196622, 18, 0, 196623, 18, 0, 196624, 18, 0, 196625, 16, 0, 262144, 16, 0, 262145, 18, 0, 262146, 18, 0, 262147, 22, 0, 262148, 18, 0, 262149, 18, 0, 262150, 18, 0, 262151, 18, 0, 262152, 18, 0, 262153, 18, 0, 262154, 18, 0, 262155, 18, 0, 262156, 18, 0, 262157, 18, 0, 262158, 18, 0, 262159, 18, 0, 262160, 18, 0, 262161, 16, 0, 327680, 16, 0, 327681, 18, 0, 327682, 18, 0, 327683, 18, 0, 327684, 18, 0, 327685, 18, 0, 327686, 18, 0, 327687, 18, 0, 327688, 18, 0, 327689, 18, 0, 327690, 18, 0, 327691, 18, 0, 327692, 18, 0, 327693, 18, 0, 327694, 18, 0, 327695, 18, 0, 327696, 22, 0, 327697, 16, 0, 393216, 16, 0, 393217, 18, 0, 393218, 18, 0, 393219, 18, 0, 393220, 23, 0, 393221, 18, 0, 393222, 18, 0, 393223, 18, 0, 393224, 18, 0, 393225, 18, 0, 393226, 18, 0, 393227, 18, 0, 393228, 18, 0, 393229, 18, 0, 393230, 18, 0, 393231, 18, 0, 393232, 18, 0, 393233, 16, 0, 458752, 16, 0, 458753, 18, 0, 458754, 18, 0, 458755, 18, 0, 458756, 18, 0, 458757, 18, 0, 458758, 18, 0, 458759, 18, 0, 458760, 22, 0, 458761, 18, 0, 458762, 18, 0, 458763, 18, 0, 458764, 23, 0, 458765, 18, 0, 458766, 18, 0, 458767, 18, 0, 458768, 18, 0, 458769, 16, 0, 524288, 16, 0, 524289, 18, 0, 524290, 18, 0, 524291, 18, 0, 524292, 18, 0, 524293, 18, 0, 524294, 18, 0, 524295, 18, 0, 524296, 18, 0, 524297, 18, 0, 524298, 18, 0, 524299, 18, 0, 524300, 18, 0, 524301, 18, 0, 524302, 18, 0, 524303, 18, 0, 524304, 18, 0, 524305, 16, 0, 589824, 21, 0, 589825, 18, 0, 589826, 18, 0, 589827, 18, 0, 589828, 18, 0, 589829, 18, 0, 589830, 18, 0, 589831, 18, 0, 589832, 18, 0, 589833, 18, 0, 589834, 18, 0, 589835, 18, 0, 589836, 18, 0, 589837, 18, 0, 589838, 18, 0, 589839, 18, 0, 589840, 18, 0, 589841, 21, 0, 655360, 16, 0, 655361, 18, 0, 655362, 18, 0, 655363, 18, 0, 655364, 18, 0, 655365, 22, 0, 655366, 18, 0, 655367, 18, 0, 655368, 18, 0, 655369, 18, 0, 655370, 18, 0, 655371, 18, 0, 655372, 18, 0, 655373, 18, 0, 655374, 18, 0, 655375, 18, 0, 655376, 18, 0, 655377, 16, 0, 720896, 16, 0, 720897, 18, 0, 720898, 18, 0, 720899, 18, 0, 720900, 18, 0, 720901, 18, 0, 720902, 18, 0, 720903, 18, 0, 720904, 18, 0, 720905, 18, 0, 720906, 18, 0, 720907, 18, 0, 720908, 18, 0, 720909, 18, 0, 720910, 22, 0, 720911, 18, 0, 720912, 18, 0, 720913, 16, 0, 786432, 16, 0, 786433, 18, 0, 786434, 23, 0, 786435, 18, 0, 786436, 18, 0, 786437, 18, 0, 786438, 18, 0, 786439, 18, 0, 786440, 18, 0, 786441, 18, 0, 786442, 18, 0, 786443, 18, 0, 786444, 18, 0, 786445, 18, 0, 786446, 18, 0, 786447, 18, 0, 786448, 18, 0, 786449, 16, 0, 851968, 16, 0, 851969, 18, 0, 851970, 18, 0, 851971, 18, 0, 851972, 18, 0, 851973, 18, 0, 851974, 18, 0, 851975, 18, 0, 851976, 18, 0, 851977, 18, 0, 851978, 23, 0, 851979, 18, 0, 851980, 18, 0, 851981, 18, 0, 851982, 18, 0, 851983, 18, 0, 851984, 18, 0, 851985, 16, 0, 917504, 16, 0, 917505, 18, 0, 917506, 18, 0, 917507, 22, 0, 917508, 18, 0, 917509, 18, 0, 917510, 18, 0, 917511, 18, 0, 917512, 18, 0, 917513, 18, 0, 917514, 18, 0, 917515, 18, 0, 917516, 18, 0, 917517, 18, 0, 917518, 18, 0, 917519, 18, 0, 917520, 18, 0, 917521, 16, 0, 983040, 16, 0, 983041, 18, 0, 983042, 18, 0, 983043, 18, 0, 983044, 18, 0, 983045, 18, 0, 983046, 18, 0, 983047, 18, 0, 983048, 18, 0, 983049, 18, 0, 983050, 18, 0, 983051, 18, 0, 983052, 18, 0, 983053, 18, 0, 983054, 22, 0, 983055, 18, 0, 983056, 18, 0, 983057, 16, 0, 1048576, 16, 0, 1048577, 18, 0, 1048578, 18, 0, 1048579, 18, 0, 1048580, 18, 0, 1048581, 18, 0, 1048582, 23, 0, 1048583, 18, 0, 1048584, 18, 0, 1048585, 18, 0, 1048586, 18, 0, 1048587, 18, 0, 1048588, 18, 0, 1048589, 18, 0, 1048590, 18, 0, 1048591, 18, 0, 1048592, 18, 0, 1048593, 16, 0, 1114112, 13, 0, 1114113, 10, 0, 1114114, 10, 0, 1114115, 10, 0, 1114116, 10, 0, 1114117, 10, 0, 1114118, 10, 0, 1114119, 10, 0, 1114120, 11, 0, 1114121, 10, 0, 1114122, 10, 0, 1114123, 10, 0, 1114124, 10, 0, 1114125, 10, 0, 1114126, 10, 0, 1114127, 10, 0, 1114128, 10, 0, 1114129, 15, 0 )

[node name="SpawnPositions" type="Node" parent="Control/Game"]

[node name="EnemySpawn1" type="Position2D" parent="Control/Game/SpawnPositions"]
position = Vector2( 42, 304 )

[node name="EnemySpawn2" type="Position2D" parent="Control/Game/SpawnPositions"]
position = Vector2( 531, 307 )

[node name="EnemySpawn3" type="Position2D" parent="Control/Game/SpawnPositions"]
position = Vector2( 274, 50 )

[node name="EnemySpawn4" type="Position2D" parent="Control/Game/SpawnPositions"]
position = Vector2( 274, 530 )

[node name="SpawnTimer" type="Timer" parent="Control/Game"]
wait_time = 2.0
autostart = true

[node name="Player1" type="Node2D" parent="Control/Game"]
modulate = Color( 1, 0.823529, 0.823529, 1 )
position = Vector2( 68, 0 )

[node name="Bob" parent="Control/Game/Player1" instance=ExtResource( 4 )]
position = Vector2( 227, 256 )

[node name="Player2" type="Node2D" parent="Control/Game"]
self_modulate = Color( 0.831373, 0.890196, 1, 1 )
rotation = 3.14159

[node name="Bob" parent="Control/Game/Player2" instance=ExtResource( 4 )]
position = Vector2( -216.993, -253.583 )

[node name="ReferenceRect" type="ReferenceRect" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 6.10352e-05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="Control" parent="."]
anchor_top = 0.778
anchor_right = 0.993
anchor_bottom = 1.0
margin_left = 572.0
margin_top = 147.328
margin_right = 0.0319824
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPContainer" type="HBoxContainer" parent="Player1"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -324.0
margin_top = -80.0
margin_right = -256.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life1" type="TextureRect" parent="Player1/HPContainer"]
margin_right = 32.0
margin_bottom = 80.0
texture = ExtResource( 3 )

[node name="Life2" type="TextureRect" parent="Player1/HPContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 80.0
texture = ExtResource( 3 )

[node name="ShootingJoystick" parent="Player1" instance=ExtResource( 5 )]
self_modulate = Color( 1, 0.768627, 0.768627, 1 )
position = Vector2( -111, -32.9999 )
scale = Vector2( 3.5, 3.5 )

[node name="MouvementJoystick" parent="Player1" instance=ExtResource( 5 )]
self_modulate = Color( 0.894118, 1, 0.854902, 1 )
position = Vector2( -457, -32.9999 )
scale = Vector2( 3.5, 3.5 )

[node name="Player2" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 0.217
margin_top = 223.0
margin_right = -576.0
margin_bottom = 80.792
rect_rotation = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPContainer" type="HBoxContainer" parent="Player2"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -324.0
margin_top = -80.0
margin_right = -256.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life1" type="TextureRect" parent="Player2/HPContainer"]
margin_right = 32.0
margin_bottom = 80.0
texture = ExtResource( 3 )

[node name="Life2" type="TextureRect" parent="Player2/HPContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 80.0
texture = ExtResource( 3 )

[node name="ShootingJoystick" parent="Player2" instance=ExtResource( 5 )]
self_modulate = Color( 1, 0.768627, 0.768627, 1 )
position = Vector2( -109, 112 )
scale = Vector2( 3.5, 3.5 )

[node name="MouvementJoystick" parent="Player2" instance=ExtResource( 5 )]
self_modulate = Color( 0.894118, 1, 0.854902, 1 )
position = Vector2( -460, 112 )
scale = Vector2( 3.5, 3.5 )
[connection signal="timeout" from="Control/Game/SpawnTimer" to="Control/Game" method="_on_SpawnTimer_timeout"]
[connection signal="need_joystick_input" from="Control/Game/Player1/Bob" to="Control/Game" method="_on_Bob_need_joystick_input"]
[connection signal="perd_une_vie" from="Control/Game/Player1/Bob" to="Control/Game" method="_on_Bob_perd_une_vie"]
[connection signal="need_joystick_input" from="Control/Game/Player2/Bob" to="Control/Game" method="_on_Bob_need_joystick_input"]
[connection signal="perd_une_vie" from="Control/Game/Player2/Bob" to="Control/Game" method="_on_Bob_perd_une_vie"]
